add confirmation screens to important actions